Finally the 16x16 is working with mouseover events. Need to fix larger numbers from squishing

--- a/style.css
+++ b/style.css
@@ -13,18 +13,17 @@ body {
 #gird-container {
     margin-top: 10vh;
     display: flex;
+    flex-wrap: wrap;
     max-width: 400px;
     max-height: 400px;
+
     border: aqua 5px solid;
 
 
 }
 div {
-    background: #000;
+    background-color: black;
     display: flex;
-    flex-wrap: wrap;
-    min-width: 1;
+    flex-basis: 20px;
     flex-grow: 1;
-    flex-shrink: 0;
-
 }
